--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+#stage {
+    align-items: center;
+    background: url('assets/meeting.jpg') no-repeat 50% 50% fixed;
+    opacity: 0.9;
+    background-size: cover;
+    color: rgba(255, 255, 255, .5);
+    display: flex;
+    justify-content: space-around;
+    align-content: space-around;
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
+#stage-caption{
+	font-size: 1.4rem;
+	font-weight: 200;
+	max-width: 60rem;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.cover-heading {
+    font-size: 6.1rem;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+.cover-lead {
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+/*Footer Styles*/
+
+.footer {
+    width: 100%;
+    height: 60px;
+    background-color: #000;
+    opacity: 0.7;
+}
+
+.footer p {
+    text-align: center;
+    padding-top: 20px;
+    margin: 0 auto;
+}
