--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -1,4 +1,4 @@
-<form (submit)="userLogin">
+<form #loginForm="ngForm" (ngSubmit)="userLogin(loginForm)">
     <label>User Name</label>
     <input type="text" [{ngModel}]="userName" name="userName">
 
