--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -1,9 +1,9 @@
-<form #loginForm="ngForm" (ngSubmit)="userLogin(loginForm)">
+<form (ngSubmit)="userLogin()">
     <label>User Name</label>
-    <input type="text" [{ngModel}]="userName" name="userName">
+    <input type="text" [(ngModel)]="userName" name="userName">
 
     <label>Password</label>
-    <input type="password" [{ngModel}]="passWord" name="passWord">
+    <input type="password" [(ngModel)]="passWord" name="passWord">
 
-    <input type="submit" value="Sign In">
+    <input type="submit" routerLink="/findEvent" value="Sign In">
 </form>
